made exploreMenu Footer and Header responsive

--- a/vite-project/src/components/Footer/Footer.css
+++ b/vite-project/src/components/Footer/Footer.css
@@ -51,3 +51,14 @@
   background-color: grey;
   border: none;
 }
+
+@media only screen and (max-width: 750px) {
+  .footer_content {
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+  }
+  .footer_copyright {
+    text-align: center;
+  }
+}
